--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,12 +19,11 @@
             {% if current_user.is_authenticated %}
             <ul class = "nav navbar-nav">
                 {% if current_user.isAdministrator() %}
-                    <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Brewery Modeling <span class="caret"></span></a>
+                    <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Configuration <span class="caret"></span></a>
                         <ul class = "dropdown-menu">
-                            <li><a href = "{{ url_for("enterprises.listEnterprises") }}">Enterprises</a></li>
-                            <li><a href = "{{ url_for("sites.listSites") }}">Sites</a></li>
-                            <li><a href = "{{ url_for("areas.listAreas") }}">Areas</a></li>
+                            <li><a href = "{{ url_for("physicalModels.selectPhysicalModel") }}">Brewery Modeling</a></li>
                             <li><a href = "{{ url_for("lookups.listLookups") }}">Lookups</a></li>
+                            <li><a href = "{{ url_for("unitOfMeasurements.listUnitOfMeasurements") }}">Units</a></li>
                             <li><a href = "{{ url_for("users.listUsers") }}">Users</a></li>
                         </ul>
                     </li>
@@ -35,7 +34,6 @@
                             {% if current_user.isAdministrator() %}
                                 <li><a href = "{{ url_for("tags.importTags") }}">Import</a></li>
                                 <li><a href = "{{ url_for("tags.exportTags") }}">Export</a></li>
-                                <li><a href = "{{ url_for("unitOfMeasurements.listUnitOfMeasurements") }}">Units</a></li>
                             {% endif %}
                         </ul>
                     </li>
