--- a/app/templates/users/users.html
+++ b/app/templates/users/users.html
@@ -7,6 +7,11 @@ Users
 {% endblock %}
 
 {% block page_content %}
+<div>
+    <ol class="breadcrumb">
+        <li class = "active">..</li>
+    </ol>
+</div>
 <div class = "page-header">
     <h1>Users <small></small></h1>
 </div>
