Add breadcrumb to lookups.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,7 @@
                     <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Configuration <span class="caret"></span></a>
                         <ul class = "dropdown-menu">
                             <li><a href = "{{ url_for("physicalModels.selectPhysicalModel") }}">Brewery Modeling</a></li>
-                            <li><a href = "{{ url_for("lookups.listLookups") }}">Lookups</a></li>
+                            <li><a href = "{{ url_for("lookups.selectLookup") }}">Lookups</a></li>
                             <li><a href = "{{ url_for("unitOfMeasurements.listUnitOfMeasurements") }}">Units</a></li>
                             <li><a href = "{{ url_for("users.listUsers") }}">Users</a></li>
                         </ul>
