--- a/app/templates/addEditModel.html
+++ b/app/templates/addEditModel.html
@@ -1,4 +1,5 @@
 {% import "bootstrap/wtf.html" as wtf %}
+{% import "macros.html" as macros %}
 
 {% extends "base.html" %}
 
@@ -7,6 +8,9 @@
 {% endblock %}
 
 {% block page_content %}
+{% if breadcrumbs %}
+    {{ macros.breadcrumb(breadcrumbs) }}
+{% endif %}
 <div class = "page-header">
     <h1>{{ operation }} <small>{{ modelName }}</small></h1>
 </div>
