--- a/app/templates/elementTemplates/select.html
+++ b/app/templates/elementTemplates/select.html
@@ -12,12 +12,12 @@ Event Frame Templates
         {% if childrenClass == "Enterprise" %}
             <li class = "active">..</li>
             {% set tableHeader = "Enterprise" %}
-            {% set pageHeaderSubText = "Select an Enterprise" %}
+            {% set pageHeaderSubText = "Enterprises" %}
         {% elif childrenClass == "Site" %}
             <li><a href = "{{ url_for("elementTemplates.selectElementTemplate", selectedClass = "Root") }}">..</a></li>
             <li class = "active">{{ parent.Name }}</li>
             {% set tableHeader = "Site" %}
-            {% set pageHeaderSubText = "Select a Site" %}
+            {% set pageHeaderSubText = "Sites" %}
         <!-- "and parent" checks for systems that have not been configured with a site yet. -->
         {% elif childrenClass == "ElementTemplate" and parent %}
             <li><a href = "{{ url_for("elementTemplates.selectElementTemplate", selectedClass = "Root") }}">..</a></li>
@@ -25,7 +25,7 @@ Event Frame Templates
                 selectedId = parent.Enterprise.id()) }}">{{ parent.Enterprise.Name }}</a></li>
             <li class = "active">{{ parent.Name }}</li>
             {% set tableHeader = "Element Template" %}
-            {% set pageHeaderSubText = "Select an Element Template" %}
+            {% set pageHeaderSubText = "" %}
         {% elif childrenClass == "ElementAttributeTemplate" %}
             <li><a href = "{{ url_for("elementTemplates.selectElementTemplate", selectedClass = "Root") }}">..</a></li>
             <li><a href = "{{ url_for("elementTemplates.selectElementTemplate", selectedClass = "Enterprise",
