--- a/app/templates/eventFrameTemplates/select.html
+++ b/app/templates/eventFrameTemplates/select.html
@@ -12,12 +12,12 @@ Event Frame Templates
         {% if childrenClass == "Enterprise" %}
             <li class = "active">..</li>
             {% set tableHeader = "Enterprise" %}
-            {% set pageHeaderSubText = "Select an Enterprise" %}
+            {% set pageHeaderSubText = "Enterprises" %}
         {% elif childrenClass == "Site" %}
             <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", selectedClass = "Root") }}">..</a></li>
             <li class = "active">{{ parent.Name }}</li>
             {% set tableHeader = "Site" %}
-            {% set pageHeaderSubText = "Select a Site" %}
+            {% set pageHeaderSubText = "Sites" %}
         <!-- "and parent" checks for systems that have not been configured with a site yet. -->
         {% elif childrenClass == "ElementTemplate" and parent %}
             <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", selectedClass = "Root") }}">..</a></li>
@@ -25,7 +25,7 @@ Event Frame Templates
                 selectedId = parent.Enterprise.id()) }}">{{ parent.Enterprise.Name }}</a></li>
             <li class = "active">{{ parent.Name }}</li>
             {% set tableHeader = "Element Template" %}
-            {% set pageHeaderSubText = "Select an Element Template" %}
+            {% set pageHeaderSubText = "Element Templates" %}
         {% elif childrenClass == "EventFrameTemplate" %}
             <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", selectedClass = "Root") }}">..</a></li>
             <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", selectedClass = "Enterprise",
@@ -34,7 +34,7 @@ Event Frame Templates
                 selectedId = parent.Site.id()) }}">{{ parent.Site.Name }}</a></li>
             <li class = "active">{{ parent.Name }}</li>
             {% set tableHeader = "Event Frame Template" %}
-            {% set pageHeaderSubText = "Select an Event Frame Template" %}
+            {% set pageHeaderSubText = "" %}
         {% elif childrenClass == "DescendantEventFrameTemplate" %}
             <!-- These are children event frame templates. -->
             {% set origin = parent.origin() %}
@@ -51,7 +51,7 @@ Event Frame Templates
             {% endfor %}
             <li class = "active">{{ parent.Name }}</li>
             {% set tableHeader = "Event Frame Template" %}
-            {% set pageHeaderSubText = "Select a Child Event Frame Template" %}
+            {% set pageHeaderSubText = "" %}
         {% endif %}
     </ol>
 </div>
@@ -108,7 +108,7 @@ Event Frame Templates
 </div>
 {% if childrenClass == "DescendantEventFrameTemplate" %}
     <div>
-        <h1>{{ parent.Name }} <small>Event Frame Attribute Templates</small></h1>
+        <h1>Event Frame Attribute Templates <small></small></h1>
     </div>
     <div>
         <a class = "btn btn-default" title = "Add" href = "{{ url_for("eventFrameAttributeTemplates.addEventFrameAttributeTemplate", 
