Using bootstrap glyphicons in import and login templates.

--- a/app/templates/authentications/login.html
+++ b/app/templates/authentications/login.html
@@ -14,3 +14,12 @@
     {{ wtf.quick_form(form) }}
 </div>
 {% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+    <script>
+        $("#submit").hide()
+        $("#submit").parent().append("<button class = \"btn btn-default\" title = \"Log In\" type = \"submit\">" +
+            "<span class = \"glyphicon glyphicon-log-in\" aria-hidden = \"true\"></span></button>")
+    </script>
+{% endblock %}
