Changed glyphcion for associating attributes with tags.

--- a/app/templates/elements/dashboard.html
+++ b/app/templates/elements/dashboard.html
@@ -85,9 +85,9 @@
     </table>
 </div>
 <div>
-    <h1>{{ element.Name }} <small>Attributes <a class = "btn btn-default" title = "Edit"
+    <h1>{{ element.Name }} <small>Attributes <a class = "btn btn-default" title = "Link Attributes to Tags"
         href = "{{ url_for("elementAttributes.listElementAttributes", elementId = element.ElementId) }}">
-        <span class="glyphicon glyphicon-edit"></span></small></h1></a>
+        <span class="glyphicon glyphicon-link"></span></small></h1></a>
 </div>
 <div>
     <table id = "attributesTable" class = "table">
