--- a/app/templates/elements/dashboard.html
+++ b/app/templates/elements/dashboard.html
@@ -87,7 +87,7 @@
 <div>
     <h1>{{ element.Name }} <small>Attributes <a class = "btn btn-default" title = "Link Attributes to Tags"
         href = "{{ url_for("elementAttributes.listElementAttributes", elementId = element.ElementId) }}">
-        <span class="glyphicon glyphicon-link"></span></small></h1></a>
+        <span class="glyphicon glyphicon-link"></span></a></small></h1>
 </div>
 <div>
     <table id = "attributesTable" class = "table">
